removed h2 @media section to see if that's what's causing the width issue on mobile

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -108,11 +108,6 @@ li {
 
 @media (max-width: 450px) {
     #logo {
-        max-width: 400px
-    }
-}
-@media (max-width: 400px) {
-    #logo {
         max-width: 350px
     }
 }
